assets/themes/bootstrap/css/custom.css
body{
	height: 100%;
	background-color: #eee;
	font-family: 'Muli', inherit, sans-serif;
	color: #aaa;
}

h1, h2, h3{
	font-family: 'Muli', inherit, sans-serif;
}

#name{
	font-size: 28px;
	margin-top: 8%;
	margin-bottom: 2%;
	font-weight: 300;
}

#splash p, #adjective-inner{
	font-size: 54px;
	font-weight: 300;
	margin: 0;
	line-height: 115%;
}

#adjective-wrapper{
  width: 705px;
}

#adjective{
	position: relative;
	width: 290px;
	display: inline-block;
	float: left;
  z-index: 1;
  height: 60px;
  perspective: 1000;
  -webkit-perspective: 1000;
}

#adjective-inner{
	text-align: center;
	display: block;
	color: #A34349;
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: all 2s ease-out;
  transition: all 2s ease-out;
  backface-visibility: hidden;
}

#adj-front, #adj-back{
  position: absolute;
  left: 0;
  height: 60px;
  width: 270px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  background-color: #eee;
}

#adj-back{
  bottom: 0;
  display: block;
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

#links{
	margin-top: 3%;
}
#links p{
	font-size: 28px;
	font-weight: 300;
	margin: 0;
	line-height: 115%;
}

#links p a, #intro-link {
	text-decoration: underline;
	color: #aaa;
}

#links p a:hover, #intro-link:hover{
	color: #428bca;
}

.special{
	font-size: inherit;
	display: inline;
	color: #A34349;
}

#things{
  float: right;
}

.rotator{
	float:left;
	font-size: inherit;
	display: inline-block;
	width: 350px;
	height: 60px;
	z-index: 1;
	perspective: 1000;
	-webkit-perspective: 1000;
}

.rotator-inner {
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: all 2s ease-out;
  transition: all 2s ease-out;
  backface-visibility: hidden;
}

.front, .back{
  position: absolute;
  left: 0;
  height: 60px;
  width: 350px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  background-color: #eee;
}

.front p, .back p{
	color: #A34349 !important;
}

.back{
	bottom: 0;
  display: block;
  -webkit-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

.flipX{
  transform: rotateX(180deg);
  -webkit-transform: rotateX(180deg);
}

.flipY{
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
}

#portfolio{
	display: none;
}

#por.contact-icons {
  opacity: 0.85;
  padding: 0 5px;
}

.contact-icons:hover {
  opacity: 1;
}

.pagination li a:hover {
  background-color: transparent;
  color: #2a6496;
}

.pagination .disabled a{
  background-color: transparent;
  color: #666;
}

.pagination .disabled a:hover{
  background-color: transparent;
}

.tag-list li {
  list-style-type: none;
  display: inline;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 12px;
}

pre {
	background-color: #333;
	color: #eee;
	border: 1px solid #444;
}

code {
	font-family: 'Source Code Pro', monospace;
	font-weight: 600;
	color: #eee;
	background-color: #333;
}

@media (min-width: 768px) {
  .blog-sidebar {
    position: fixed;
    margin-left: 65%;
    max-width: 263px;
  }
}

@media (max-width: 767px) {
  .blog-sidebar { 
    position: relative;
    margin-left: 0;
  }
}
#portfolio h1, #portfolio h3{
	font-family: 'Muli', inherit, sans-serif;
	font-weight: 300;
}

.caption-group{
	position: relative;
	margin-bottom: 20px;
}

.caption-group:hover img{
	-webkit-filter: grayscale(100%);
}

.caption-panel{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	color: white;
	padding: 10px 20px 20px;
	text-align: center;
	background-color: #333;
	border-radius: 4px;
	opacity: 0;
	-webkit-opacity: 0;
	transition: .5s all ease-in-out;
	-webkit-transition: .5s all ease-in-out;
	backface-visibility: hidden;
}

.caption-panel:hover{
	opacity: 1;
	-webkit-opacity: 1;
	transform: translate(15px, 15px);
	-webkit-transform: translate(15px, 15px);
}

.blog-post{
	font-family: 'Source Sans Pro', sans-serif;
}

.blog-post-title a{
	color: #aaa;
}

.blog-post p{
	font-size: 16px;
}

.contact-icons {
  opacity: 0.85;
  padding: 0 5px;
}

.contact-icons:hover {
  opacity: 1;
}

.pagination li a{
	background: transparent;
	border: none;
}

.pagination li a:hover {
  background-color: transparent;
  color: #2a6496;
}

.pagination .disabled a{
  background-color: transparent;
  color: #666;
}

.pagination .disabled a:hover{
  background-color: transparent;
}

.tag-list li {
  list-style-type: none;
  display: inline;
  font-size: 12px;
}

@media (min-width: 768px) {
  .blog-sidebar {
    position: fixed;
    margin-left: 65%;
    max-width: 263px;
  }
}

@media (max-width: 767px) {
  .blog-sidebar { 
    position: relative;
    margin-left: 0;
  }
  #adjective{
  position: relative;
  width: 290px;
  height: 64px;
  display: block;
  float: none;
  }

  #things{
    float: none;
    display: block;
    margin-top: 64px !important;
  }
}

